--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
   "name": "kairstenfay.github.io",
-  "homepage": "https://kairstenfay.github.io/new-website",
+  "homepage": "https://kairstenfay.github.io/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "purgecss": "^4.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
@@ -39,6 +40,10 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    "@craco/craco": "^6.2.0",
+    "autoprefixer": "^9.8.6",
+    "gh-pages": "^3.2.3",
+    "postcss": "^7.0.36",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.4"
   }
 }
